CONSTRUCTOR_NAME constant + correction; infomap + rewire re-implementation; rewire infinite loop protection, separate SAM computation